--- a/project2b/form.html
+++ b/project2b/form.html
@@ -23,7 +23,7 @@
 	</head>
 	
 	<body>
-		<div data-role="page" id="my_form" data-add-back-btn="true">
+		<div data-role="page" id="my_form" data-add-back-btn="true" data-theme="a">
 	
 		<div data-role="header" data-position="fixed">
 			<h1>Form-B</h1>
@@ -111,8 +111,8 @@
 				<ul>
 					<li><a href="index.html" data-icon="home" class="ui-btn-active">A App</a></li>
 					<li><a href="project2b/index.html" data-icon="forward">B App</a></li>
-					<li><a href="http://nubianbook.github.com/mypage/" data-icon="forward">My Page</a></li>
-					<li><a href="https://github.com/nubianbook/MIU-Project-3" data-icon="home">My Repo</a></li>
+					<li><a href="http://nubianbook.github.com/mypage-4/" data-icon="forward">My Page</a></li>
+					<li><a href="https://github.com/nubianbook/MIU-Project-4" data-icon="home">My Repo</a></li>
 				</ul>
 		</div>
 		
