--- a/project2b/index.html
+++ b/project2b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-	<div data-role="page" id="home" data-add-back-btn="true">
+	<div data-role="page" id="home" data-add-back-btn="true" data-theme="a">
 	
 		<div data-role="header" data-position="fixed">
 			<h1>Movie Tracker B</h1>
@@ -97,8 +97,8 @@
 				<ul>
 					<li><a href="../index.html" data-icon="home">A App</a></li>
 					<li><a href="project2b/index.html" class="ui-btn-active" data-icon="forward">B App</a></li>
-					<li><a href="http://nubianbook.github.com/mypage/" data-icon="forward">My Page</a></li>
-					<li><a href="https://github.com/nubianbook/MIU-Project-3" data-icon="home">My Repo</a></li>
+					<li><a href="http://nubianbook.github.com/mypage-4/" data-icon="forward">My Page</a></li>
+					<li><a href="https://github.com/nubianbook/MIU-Project-4" data-icon="home">My Repo</a></li>
 				</ul>
 		   </div>
 		
@@ -281,8 +281,8 @@
 				<ul>
 					<li><a href="../index.html" data-icon="home">A App</a></li>
 					<li><a href="project2b/index.html" class="ui-btn-active" data-icon="forward">B App</a></li>
-					<li><a href="http://nubianbook.github.com/test/" data-icon="forward">My Page</a></li>
-					<li><a href="https://github.com/nubianbook/MIU-Project-2" data-icon="home">My Repo</a></li>
+					<li><http://nubianbook.github.com/mypage-4/" data-icon="forward">My Page</a></li>
+					<li><https://github.com/nubianbook/MIU-Project-4" data-icon="home">My Repo</a></li>
 				</ul>
 		</div>
 		
